--- a/Financial_Plotly_Dash_Dashboard/Y_Charts_Scraper.ipynb
+++ b/Financial_Plotly_Dash_Dashboard/Y_Charts_Scraper.ipynb
@@ -148,8 +148,8 @@
     "           'referer': 'https://ycharts.com/login?next=/dashboard/'}\n",
     "\n",
     "# Set login data\n",
-    "login_data = {'username': 'appdata4563626@gmail.com',\n",
-    "              'password': 'BigRed1993!'}\n",
+    "login_data = {'username': '**********@gmail.com',\n",
+    "              'password': '**********'}\n",
     "\n",
     "# Set login session\n",
     "session = requests.Session()\n",
