--- a/S&P_500_Index_Analysis.ipynb
+++ b/S&P_500_Index_Analysis.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<h3>Description</h3>\n",
     "\n",
-    "In the below analysis, the S&P 500 Index's closing prices will be explored within a four-decade time frame. The objective is to analyze the index and determine if the index is an invaluable long term investment.\n",
+    "In the below analysis, the S&P 500 Index's closing prices will be explored within a four-decade time frame. The objective is to analyze the index and determine if the index is a valuable long term investment.\n",
     "\n",
     "Four decades:\n",
     "\n",
@@ -19,7 +19,7 @@
     "\n",
     "The analysis will seek to understand the compounded returns (not including dividends) the index has produced in the above within time frames. \n",
     "\n",
-    "A/B will be used to infer if the difference in means of prices between decades is statistically significant. The goal is to observe if the closing prices are higher or lower between the time frames and determine the investment risk. \n",
+    "A/B test will be used to infer if the difference in means of prices between decades is statistically significant. The goal is to observe if the closing prices are higher or lower between the time frames and determine the investment risk. \n",
     "\n",
     "If the prices are higher in each new decade and statistically significant, intuitively, this will be determined to be a positive sign and that the index is producing profits; the opposite is true for the opposite results.\n",
     "\n",
