--- a/S&P_500_Index_Analysis.ipynb
+++ b/S&P_500_Index_Analysis.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<h3>Description</h3>\n",
     "\n",
-    "In the below analysis, the S&P 500 Index's closing prices will be explored within a four-decade time frame. The objective is to analyze the S&P 500 index and determine if the index is and can continue to be a valuable long term investment.\n",
+    "In the below analysis, the S&P 500 Index's closing prices will be explored within a four-decade time frame. The objective is to analyze the index and determine if the index is and can continue to be a valuable long term investment.\n",
     "\n",
     "Four decades:\n",
     "\n",
